<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/finalgame"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
    tools:context=".VerifyPhoneActivity">

    <LinearLayout
        android:id="@+id/lck"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:freezesText="false"
            android:text="@string/appname"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:fontFamily="@font/cabin_sketch_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#95D3D3D3"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="false"
                android:text="@string/enter_the_otp_here"
                android:textAlignment="center"
                android:textColor="@color/textcolornew"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/asul" />

            <EditText
                android:id="@+id/otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fill_otp"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="6"
                android:textSize="24sp"
                app:fontFamily="@font/asul"
                tools:targetApi="o" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:fontFamily="@font/asul" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>

