<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/finalgame"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/lck"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:freezesText="false"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:fontFamily="@font/cabin_sketch_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#95D3D3D3"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="false"
                android:text="@string/your_name"
                android:textAlignment="center"
                android:textColor="@color/textcolornew"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameuser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:gravity="center"
                android:inputType="textPersonName|text|textCapSentences"
                android:singleLine="true"
                android:textSize="24sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="false"
                android:text="@string/your_mobile_number"
                android:textAlignment="center"
                android:textColor="@color/textcolornew"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false" />


            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:digits="0123456789"

                android:ems="10"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="24sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:text="@string/continued"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>

